--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: make
+
+    - name: Install libcurl
+      run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
+
+    - name: Make
       run: ./build.sh
