--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install libcurl
-      run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
+      run: sudo apt-get update && sudo apt-get -y upgrade && sudo apt-get install -y libcurl4-openssl-dev
 
     - name: Make
       run: ./build.sh
