--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,8 +14,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install build essentials
+      run: sudo apt-get update && sudo apt-get install -y build-essential
+
+    - name: Install C++ development tools
+      run: sudo apt-get install -y g++ cmake
+      
     - name: Install libcurl
-      run: sudo apt-get update && sudo apt-get -y upgrade && sudo apt-get install -y libcurl4-openssl-dev
+      run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
 
     - name: Make
       run: ./build.sh
