--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -37,3 +37,25 @@ jobs:
 
     - name: Print help
       run: ./out/lvpnfu -h
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Read version_info
+        run: |
+          VERSION_INFO=$(cat version_info)
+          echo "Version Info: $VERSION_INFO"
+          echo "::set-output name=version::$VERSION_INFO"
+
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          release_name: Release ${{ steps.release.outputs.version }}
+          tag_name: v${{ steps.release.outputs.version }}
