--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -35,38 +35,38 @@ jobs:
     - name: Print version info
       run: ./out/lvpnfu --version
 
-  #   - name: Archive executable
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: lvpnfu-artifact
-  #       path: ./out/lvpnfu
+    - name: Archive executable
+      uses: actions/upload-artifact@v2
+      with:
+        name: lvpnfu-artifact
+        path: ./out/lvpnfu
 
-  # release:
-  #   needs: build
-  #   runs-on: ubuntu-latest
+  release:
+    needs: build
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  #     - name: Read version_info
-  #       id: version
-  #       run: |
-  #         VERSION_INFO=$(cat version_info)
-  #         echo "Version Info: $VERSION_INFO"
-  #         echo "::set-output name=version::$VERSION_INFO"
+      - name: Read version_info
+        id: version
+        run: |
+          VERSION_INFO=$(cat version_info)
+          echo "Version Info: $VERSION_INFO"
+          echo "::set-output name=version::$VERSION_INFO"
 
-  #     - name: Download artifact
-  #       uses: actions/download-artifact@v2
-  #       with:
-  #         name: lvpnfu-artifact
-  #         path: ./out
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: lvpnfu-artifact
+          path: ./out
 
-  #     - name: Create Release
-  #       id: create_release
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         name: Release ${{ steps.version.outputs.version }}
-  #         tag_name: v${{ steps.version.outputs.version }}
-  #         files: ./out/lvpnfu
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: Release ${{ steps.version.outputs.version }}
+          tag_name: v${{ steps.version.outputs.version }}
+          files: ./out/lvpnfu
